
  ZOOKEEPER-1147. Add support for local sessions (Jay Shrauner, thawan via thawan)

  ZOOKEEPER-1691. Add a flag to disable standalone mode (Helen Hastings via michim)

  ZOOKEEPER-442. need a way to remove watches that are no longer of
  interest (Rakesh R, Daniel Gómez Ferro via phunt)

  ZOOKEEPER-1830. Support command line shell for removing watches
  (Rakesh R via michim)

BUGFIXES:

  ZOOKEEPER-786. Exception in ZooKeeper.toString
  (Thomas Koch via phunt)

  ZOOKEEPER-1191. Synchronization issue - wait not in guarded block (Alex Shraer via breed)

  ZOOKEEPER-1192. Leader.waitForEpochAck() checks waitingForNewEpoch instead of checking electionFinished (Alex Shraer via breed)

  ZOOKEEPER-1203. Zookeeper systest is missing Junit Classes
  (Prashant Gokhale via phunt)
  
  ZOOKEEPER-1174. FD leak when network unreachable (Ted Dunning via camille)

  ZOOKEEPER-1206. Sequential node creation does not use always use
  digits in node name given certain Locales. (Mark Miller via phunt)

  ZOOKEEPER-1212. zkServer.sh stop action is not conformat with LSB
  para 20.2 Init Script Actions (Roman Shaposhnik via phunt)

  ZOOKEEPER-1190. ant package is not including many of the bin scripts
  in the package (zkServer.sh for example) (Eric Yang via phunt)

  ZOOKEEPER-1241. Typo in ZooKeeper Recipes and Solutions
  documentation (Jingguo Yao via phunt)

  ZOOKEEPER-1220. ./zkCli.sh 'create' command is throwing
  ArrayIndexOutOfBoundsException (kavita sharma via phunt)

  ZOOKEEPER-1256. ClientPortBindTest is failing on Mac OS X
  (Daniel Gómez Ferro via phunt)
  
  ZOOKEEPER-1264. FollowerResyncConcurrencyTest failing intermittently. (phunt via camille)
  
  ZOOKEEPER-1246. Dead code in PrepRequestProcessor catch Exception block. (camille)

  ZOOKEEPER-1271. testEarlyLeaderAbandonment failing on solaris -
  clients not retrying connection (mahadev via phunt)
  
  ZOOKEEPER-1264. FollowerResyncConcurrencyTest failing 