@@ -38,6 +38,7 @@ extern "C" {
 #define ZOO_MULTI_OP 14
 #define ZOO_CREATE2_OP 15
 #define ZOO_RECONFIG_OP 16
+#define ZOO_REMOVE_WATCHES 17
 #define ZOO_CLOSE_OP -11
 #define ZOO_SETAUTH_OP 100
 #define ZOO_SETWATCHES_OP 101
